applications/harbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # SSL'i geçici kapat
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: harbor.anasigorta.com.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: harbor-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: harbor-service
  namespace: default
subsets:
- addresses:
  - ip: 185.87.252.126
  ports:
  - port: 80
